fix jump-links in about-carousel

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,6 +174,7 @@ body#about {
   display: flex;
   align-items: stretch;
 }
+.about-carousel .flickity-viewport { width: 100%; }
 //.about-carousel .flickity-viewport { position: static; }
 .about-carousel .flickity-page-dots {
   bottom: 60px;
@@ -431,7 +432,7 @@ body#about {
   .carousel-cell>img, 
   .carousel-cell video {
     position: static;
-    object-fit: contain;
+    object-fit: cover;
     width: auto;
   }
   .flickity-button { display: block; }
